--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 }
 #ecran1 {
 
-	background-image: url(lgzxooq.png);
+	background-image: url(flat-wallpaper-5.jpg);
 	background-size: cover;
 
 	width:900px;
@@ -21,6 +21,9 @@ html {
 .hero {
 	position: absolute;
 	top: 10%;
+  border-style: solid;
+  border-color: green;
+  border-width: 5px;
 
 }
 
@@ -36,6 +39,9 @@ html {
 	right: 0;
 	width: 200px;
   top: 10%;
+  border-style: solid;
+  border-color: green;
+  border-width: 5px;
 }
 
 
@@ -51,15 +57,14 @@ html {
 .affichHero {
 	position: absolute;
 	width: 200px;
-	left: 40%;
+	left: 34%;
 	top: 40%;
 	background-color: transparent;
 }
 
 .affichHero img {
-	width: 100px;
+	width: 190px;
 	height: 200px;
-	margin-left: 20%;
 }
 
 
@@ -68,7 +73,7 @@ html {
 
 #ecran2 {
 
-	background-image: url(flat-design-wallpapers-HD-05.png);
+	background-image: url(free-mountain-landscape-wallpaper.png);
 	background-size: cover;
 	position: relative;
 
@@ -146,7 +151,7 @@ html {
 .img_heros_gauche {
   position: absolute;
   left: 0;
-  width: 110px;
+  width: 190px;
   height: 260px;
   background-color: transparent;
 }
@@ -173,7 +178,7 @@ html {
   position: absolute;
   right: 0;
   /*!  */
-  width: 110px;
+  width: 190px;
   height: 260px;
   right: 10px;
   background-color: transparent;
@@ -283,7 +288,7 @@ p {
   height: 80px;
 }
 .affichResult {
-  background-color: gray;
+  background-color: transparent;
   width: 93px;
   height: 80px;
   float: right;
